# StateForge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.de.md  README.md
crates/sf-cli/: Cargo.toml
crates/sf-cli/src/: main.rs
crates/sf-core/: Cargo.toml
crates/sf-core/src/: lib.rs
crates/sf-core/src/ai/: claude.rs  mod.rs  prompts.rs
crates/sf-core/src/db/: mod.rs  queries.rs
crates/sf-core/src/db/migrations/: 0001_init.sql
crates/sf-core/src/diagram/: graphviz.rs  json_graph.rs  layout.rs  mermaid.rs  mod.rs  svg.rs
crates/sf-core/src/generator/: go.rs  kotlin.rs  mod.rs  swift.rs  typescript.rs
crates/sf-core/src/log_analyzer/: error_paths.rs  grouper.rs  mod.rs  sequence.rs
crates/sf-core/src/models/: analysis.rs  diagram.rs  mod.rs  state_machine.rs
crates/sf-core/src/parser/: generic.rs  go.rs  kotlin.rs  mod.rs  swift.rs  typescript.rs
crates/sf-core/src/plugin/: mod.rs
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Analyzer/: AnalysisView.tsx
frontend/src/components/Editor/: CodePanel.tsx  DiagramEditor.tsx  SplitView.tsx
frontend/src/components/Generator/: GeneratorView.tsx
frontend/src/components/Settings/: SettingsView.tsx
frontend/src/lib/: tauri.ts
frontend/src/stores/: machineStore.ts  settingsStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  diagram.rs  generator.rs  machines.rs  mod.rs  parser.rs  settings.rs
