[workspace]
members = ["crates/sf-core", "crates/sf-cli", "src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["RayStudio — Rafael Yilmaz"]
license = "MIT"

[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"
thiserror    = "1"
tracing      = "1"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1", features = ["v4", "serde"] }
reqwest      = { version = "0.12", features = ["json"] }
regex        = "1"
once_cell    = "1"
