[package]
name    = "stateforge-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "stateforge_tauri_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stateforge-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sf-core    = { path = "../crates/sf-core" }
tauri      = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring    = "3"
dirs       = "5"
