[package]
name    = "sf-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stateforge"
path = "src/main.rs"

[dependencies]
sf-core   = { path = "../sf-core" }
tokio     = { workspace = true }
anyhow    = { workspace = true }
tracing   = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap      = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
keyring   = "3"
dirs      = "5"
