[package]
name    = "sf-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
reqwest      = { workspace = true }
regex        = { workspace = true }
once_cell    = { workspace = true }

sqlx         = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "migrate"] }
dashmap      = "6"
keyring      = "3"
async-trait  = "0.1"
dirs         = "5"
glob         = "0.3"
petgraph     = "0.6"    # graph algorithms for FSM analysis
indexmap     = { version = "2", features = ["serde"] }
